--- a/movies.html
+++ b/movies.html
@@ -14,7 +14,7 @@
     <div class="mov">
 	<h1>Movies</h1></div>
     <center>
-	<a href="https://www.imdb.com/title/tt4154756/?ref_=nv_sr_1"><img src="avengers.jpg" alt="Avengers" width="500"></a>
+	<a href="https://www.imdb.com/title/tt4154756/?ref_=nv_sr_1"><img src="Avengers.jpg" alt="Avengers" width="500"></a>
 <ul>
 	<p>Genres: Action, Adventure, Fantasy, </p>
 	<p>Release Date: 3 May 2018</p>
