--- a/movies.html
+++ b/movies.html
@@ -25,8 +25,9 @@
 <ul>
 	<p>Genres: Action, Adventure, Comedy   </p>
     <p><strong>Release Date: 17 May 2018</strong>  </p>
-    <li><strong>Storyline: After losing Vanessa (Morena Baccarin), the love of his life, 4th-wall breaking mercenary Wade Wilson aka Deadpool (Ryan Reynolds) must assemble a team and protect a young, full-figured mutant Russell Collins aka Firefist (Julian Dennison) from Cable (Josh Brolin), a no-nonsense, dangerous cyborg from the future, and must also learn the most important lesson of all: to be part of a family again. </strong>	
-        <p align="Center"><a href="https://www.imdb.com/title/tt2975590/?ref_=nv_sr_1"> <img src="whowillwin.jpg" width="500"> </a></p>
+    <li><strong>Storyline: After losing Vanessa (Morena Baccarin), the love of his life, 4th-wall breaking mercenary Wade Wilson aka Deadpool (Ryan Reynolds) must assemble a team and protect a young, full-figured mutant Russell Collins aka Firefist (Julian Dennison) from Cable (Josh Brolin), a no-nonsense, dangerous cyborg from the future, and must also learn the most important lesson of all: to be part of a family again. </strong></li>	
+</ul>  
+        <a align="Center"><a href="https://www.imdb.com/title/tt2975590/?ref_=nv_sr_1"> <img src="Whowillwin.jpg" width="500"> </a></p>
 <ul>
     <p>Genres: Action, Adventure, Fantasy </p>
     <p>Release Date: 24 March 2016 </p>
